fix code to remove horizontal scroll on hotel.html and restaurant.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,8 +328,8 @@ a:hover{
     background-size: 100%;
     transition: background-size 3s ease-in-out;
     margin-top:10px;
-    right:5px;
-    left:5px;
+    right:0;
+    left:0;
     top:20px;
     padding:0;
 }
@@ -352,10 +352,6 @@ a:hover{
 .hotel-link h2{
     background: rgba(66, 91, 88, 0.6);
 }
-
-/* .hotel-link:hover {
-    background: rgba(66, 91, 88, 0.6);
-} */
 
 /* feature icons */
 
@@ -672,6 +668,10 @@ h4 img{
     text-align: center
 }
 
+#bedroom-select{
+    width:96%;
+}
+
 .king-image{
     background-image: url("../images/king-bed.jpg");
     right: 2px;
@@ -679,6 +679,7 @@ h4 img{
 
 .double-image {
     background-image: url("../images/double-bed.jpg");
+    background-size: 110%;
     right:1px;
 }
 
@@ -687,17 +688,21 @@ h4 img{
 }
 
 .king-image,
+.twin-image{
+    background-size: 100%;
+}
+
+
+.king-image,
 .double-image,
 .twin-image {
     height: 300px;
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 100%;
-    transition: background-size 3s ease-in;
+    transition: background-size 2s ease-in;
     border:solid #425B58 5px;
     padding: 2px;
-    transition: height 1s;
 }
 
 .king-image a,
@@ -1221,6 +1226,10 @@ article i{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.restaurant-info-row{
+    margin:0;
 }
 
 .chef-about{
